# fastapi-work

./: .dockerignore  .gitignore  .gitmodules  .mcp.json  CLAUDE.md  Dockerfile  Dockerfile.internal  README.md  main.py  pyproject.toml  task-definition.json
.claude/: settings.json
.github/: dependabot.yml
.github/workflows/: build-and-push.yml  update-submodule.yml
app/: __init__.py  internal_main.py  main.py
cloudformation/: README.md  github-oidc.yaml  template.yaml
deploy/: internal-task-definition.json  task-definition.json
scripts/: common.sh  start.sh  status.sh  stop.sh
