[project]
name = "fastapi-ecs-practice"
version = "0.1.0"
description = "FastAPI の最小 API を ECS Fargate + ALB にデプロイする学習用プロジェクト"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.136.3",
    "uvicorn[standard]>=0.49.0",
]

[dependency-groups]
dev = [
    "cfn-lint>=1.51.4",
]
